# repoindex-analyzer-bash

./: README.md  pyproject.toml
src/repoindex_analyzer_bash/: __init__.py
tests/: test_bash_package.py
