[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoindex-analyzer-bash"
version = "0.1.0"
description = "First-party Bash analyzer plugin for repoindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "repoindex",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
]

[project.entry-points."repoindex.analyzers"]
bash = "repoindex_analyzer_bash:build_analyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
